# nipype

./: .codespellrc  .coveragerc  .dockerignore  .et  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .noserc  .pre-commit-config.yaml  .project  .pydevproject  .pylintrc  .readthedocs.yml  .travis.yml  .wci.yml  .zenodo.json  CHANGES  CHANGES.orig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.rst  THANKS  THANKS.rst  Vagrantfile  about.html  build_docs.py  changes.html  circle.yml  codecov.yml  conftest.py  documentation.html  genindex.html  index.html  (+21 more)
.circle/: codecov.sh  tests.sh
.circleci/: build_docs.sh  config.yml  pytests.sh  test_complete.sh  test_fmri_fsl_reuse_linear_l1.sh  test_fmri_spm_nested_multiproc_l2.sh  test_init.sh  test_py2_fmri_spm_nested_multiproc_l2.sh  test_py2_pytest.sh  test_py3_docs.sh  test_py3_fmri_fsl_feeds_linear_l1.sh  test_py3_fmri_fsl_reuse_linear_l1.sh  test_py3_fmri_spm_dartel_linear_l1.sh  test_py3_fmri_spm_dartel_linear_l2.sh  test_py3_fmri_spm_dartel_multiproc_l1.sh  test_py3_fmri_spm_dartel_multiproc_l2.sh  test_py3_fmri_spm_linear_3d.sh  test_py3_fmri_spm_linear_4d.sh  test_py3_fmri_spm_nested_multiproc_l1.sh  test_py3_pytest.sh  test_pytest.sh  tests.sh
.codeboarding/: on_boarding.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codespell.yml  contrib.yml  main.yml  package.yml  prerelease.yml  shellcheck.yml  tests.yml  tutorials.yml  workflow_failure.md
0.10.0/: .buildinfo  about.html  genindex.html  index.html  objects.inv
0.10.0/_downloads/: fmri_spm_dartel.py
0.10.0/_images/: graphviz-0c9cf2a68f4ddbc8a692d4b3dece16be2be24d27.png.map  (+8 more)
0.11.0/: about.html  searchresults.html
0.9.2/: about.html  documentation.html  genindex.html  np-modindex.html  objects.inv  searchindex.js  version.html
_downloads/: dmri_connectivity.py  dmri_dtk_dti.py  fmri_spm_face.py  smri_freesurfer.py  tessellation_tutorial.py
_images/: graphviz-21aa3a9a2cd7a6375a3c4fd07666a22d942cec4e.png.map  graphviz-2f95972beab4e2ca258eaf46a14c37fd2e5bae67.png.map  graphviz-319073aec5f9f8241f3ea02cefebac7833cf89d7.png.map  graphviz-56c88ff5fd58c2252db9118875e8a06e7121ff78.png.map  graphviz-61f8fee072b251cc3b1fb851865c98b1939653fe.png.map  graphviz-690175e3113c63034325a859fdd3b6eabff18880.png.map  graphviz-69ddcdbc43da24a9e823b2a293262a1d19e57551.png.map  graphviz-9eabe5ec6512630d12ae8d36aab8be241a6c92c1.png.map  graphviz-b0a98a5120800f7480a7d8d4144c3d38379e0ba8.png.map  graphviz-b20a6f55dcb061f28aac6fe4781a5457c386aecb.png.map  graphviz-b65596b443fdc105a6508acf176afcc6261aa65a.png.map  graphviz-c075d19381906363f3452d87c5543f3c89de32ab.png.map  graphviz-caef12343ee81918cc4aac81e142e58ff9f1adde.png.map  graphviz-cd78866c2fec8ad7a4111926a539df5c426f2829.png.map  graphviz-d12860869a96e47a8d540f2c9e92a6eac7b5a979.png.map  graphviz-dd07272a67d83366c1f83029e5ec42776422b87a.png.map  graphviz-e0e2fb18942fa4dc1270513ca74d8eeb9cb83a28.png.map  graphviz-ee181f9f1ac8c5fcb556c3a9e4102599ce9a811b.png.map  graphviz-f760e8301415974f915af0a8dc964c37754ffbc9.png.map  inheritance-eb932c235fa555ce5b10386fae9014e0f5a435e3.png.map
api/: index.html
devel/: architecture.html  cmd_interface_devel.html  filename_generation.html  index.html  interface_specs.html  matlab_interface_devel.html  provenance.html  python_interface_devel.html  software_using_nipype.html  writing_custom_interfaces.html
doc/: .gitignore  Makefile  README.txt  about.rst  changes.rst  citation.rst  conf.py  developers.rst  documentation.rst  examples.rst  index.rst  interfaces.rst  license.rst  links_names.txt  make.bat  pyscript.m  quickstart.rst  requirements.txt  searchresults.rst  usecases.rst  version.rst
docker/: Dockerfile.base  Dockerfile_base  Dockerfile_py27  Dockerfile_py34  Dockerfile_py35  Dockerfile_py36  base.Dockerfile  generate_dockerfiles.sh  prune_dockerfile.sh
examples/: README  README.md  Show_ANTSTemplateBuilder.py  Show_antsRegistration.py  Show_antsRegistrationTemplateBuilder.py  afni_dicomconvert.py  amri_freesurfer.py  antsSimpleAverageWF.py  ants_tutorial.py  bedpostx.py  bet_inputs_gui.py  buildTemplateParallelDriver.py  caching_example.py  camino_dti_tutorial.py  connectivity.py  connectivity_tutorial.py  connectivity_tutorial_advanced.py  connectivity_tutorial_highresparc.py  dartmouth_workshop_2010.py  dicomconvert.py  dicomconvert1.py  dicomconvert2.py  dicomconvert3.py  diffusion_toolkit_tutorial.py  dmri_camino_dti.py  dmri_connectivity.py  dmri_connectivity_advanced.py  dmri_dtk_dti.py  dmri_dtk_odf.py  dmri_fsl_dti.py  dmri_group_connectivity_camino.py  dmri_group_connectivity_mrtrix.py  dmri_mrtrix_dti.py  dmri_preprocessing.py  dmri_tbss_nki.py  dmri_tractography.py  dti_tutorial.py  dtk_dti_tutorial.py  dtk_odf_tutorial.py  example1.py  (+71 more)
interfaces/: index.html
junk/: README.txt  jobstruct.mat  parse_spm_config.m  parse_spm_struct.py  spm_job_params  spmparamlist.yaml  test_pipeline.py
matlabscripts/: README.txt  parse_spm_config2.m
nipype/: COMMIT_INFO.txt  __init__.py  _version.py  api.py  conftest.py  exceptions.py  info.py  pkg_info.py  pytest.ini  refs.py  setup.py  version.py
tools/: README  apigen.py  build_interface_docs.py  build_modref_templates.py  checkspecs.py  ex2rst  feedstock.sh  github.py  gitwash_dumper.py  install_spm_mcr.sh  interface_inputspec_testwriter.py  interfacedocgen.py  make_examples.py  mynipy  nipype_nightly.py  report_coverage.py  retry_cmd.sh  run_examples.py  run_interface.py  setup.py  toollib.py  update_changes.sh  update_mailmap.sh  update_requirements.py  update_zenodo.py
users/: caching_tutorial.html  config_file.html  debug.html  function_interface.html  grabbing_and_sinking.html  index.html  install.html  interface_tutorial.html  joinnode_and_itersource.html  mapnode_and_iterables.html  mipav.html  model_specification.html  nipypecmd.html  pipeline_tutorial.html  plugins.html  saving_workflows.html  select_files.html  spmmcr.html  tutorial_101.html  tutorial_102.html  tutorial_103.html  vagrant.html
(+2752 files in other folders)
