[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nipype"
dynamic = ["version"]
description = "Neuroimaging in Python: Pipelines and Interfaces"
readme = "README.rst"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "nipype developers", email = "neuroimaging@python.org" },
]
maintainers = [
    { name = "nipype developers", email = "neuroimaging@python.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=6.6.0",
    "networkx>=2.5",
    "nibabel>=3.0",
    "numpy>=1.21",
    "packaging>=21.0",
    "prov>=1.5.2",
    "pydot>=1.2.3",
    "python-dateutil>=2.2",
    "rdflib>=5.0.0",
    "scipy>=1.8",
    "simplejson>=3.8.0",
    "traits>=6.2",
    "filelock>=3.0.0",
    "acres>=0.3.0",
    "etelemetry>=0.3.1",
    "looseversion!=1.2,>=1.0.1",
    "lxml>=4.9.1",
    "puremagic>=1.15",
]

[project.optional-dependencies]
data = ["datalad"]
doc = [
    "dipy",
    "ipython",
    "matplotlib",
    "nbsphinx",
    "sphinx-argparse",
    "sphinx>=2.1.2",
    "sphinxcontrib-apidoc",
]
duecredit = ["duecredit"]
maint = ["GitPython", "fuzzywuzzy"]
nipy = ["nitime", "nilearn", "dipy", "nipy", "matplotlib"]
profiler = ["psutil>=5.0"]
pybids = ["pybids>=0.7.0"]
specs = ["black"]
ssh = ["paramiko"]
tests = [
    "coverage >= 5.2.1",
    "pandas >= 1.5.0",
    "pytest >= 6",
    "pytest-cov >=2.13",
    "pytest-timeout >=1.4",
    "pytest-doctestplus>=1.1.0",
    "pytest-env>=1.1.0",
    "pytest-xdist >= 2.5",
    "sphinx >=7",
]
xvfbwrapper = ["xvfbwrapper"]
all = [
    "acres",
    "black",
    "click>=6.6.0",
    "coverage>=5.2.1",
    "datalad",
    "dipy",
    "duecredit",
    "etelemetry>=0.3.1",
    "filelock>=3.0.0",
    "fuzzywuzzy",
    "GitPython",
    "ipython",
    "looseversion!=1.2",
    "matplotlib",
    "nbsphinx",
    "networkx>=2.5",
    "nibabel>=3.0",
    "nilearn",
    "nipy",
    "nitime",
    "numpy>=1.21",
    "packaging",
    "pandas>=1.5.0",
    "paramiko",
    "prov>=1.5.2",
    "psutil>=5.0",
    "puremagic",
    "pybids>=0.7.0",
    "pydot>=1.2.3",
    "pytest-cov>=2.13",
    "pytest-doctestplus",
    "pytest-env",
    "pytest-timeout>=1.4",
    "pytest-xdist>=2.5",
    "pytest>=6",
    "python-dateutil>=2.2",
    "rdflib>=5.0.0",
    "scipy>=1.8",
    "simplejson>=3.8.0",
    "sphinx-argparse",
    "sphinx>=7",
    "sphinx>=2.1.2",
    "sphinxcontrib-apidoc",
    "traits>=6.2",
    "xvfbwrapper",
]
dev = [
    "black",
    "coverage>=5.2.1",
    "dipy",
    "ipython",
    "matplotlib",
    "nbsphinx",
    "pandas>=1.5.0",
    "pytest-cov>=2.13",
    "pytest-doctestplus",
    "pytest-env",
    "pytest-timeout>=1.4",
    "pytest-xdist>=2.5",
    "pytest>=6",
    "sphinx-argparse",
    "sphinx>=7",
    "sphinx>=2.1.2",
    "sphinxcontrib-apidoc",
]

[project.urls]
Homepage = "http://nipy.org/nipype"
Documentation = "http://nipy.org/nipype"
Source = "http://github.com/nipy/nipype"
Download = "http://github.com/nipy/nipype/archives/master"

[project.scripts]
nipypecli = "nipype.scripts.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "nipype/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/nipype",
    "/doc",
    "/tools",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.rst",
    "/THANKS.rst",
    "/Makefile",
]

[tool.hatch.build.targets.wheel]
packages = ["nipype"]

[tool.black]
skip-string-normalization = true

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["nipype"]
log_cli_level = "INFO"
xfail_strict = true
norecursedirs = [".git"]
addopts = [
  "-svx",
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--cov=nipype",
  "--cov-report=xml",
  "--cov-config=pyproject.toml",
]
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"
